--- a/application/admin/view/Record/record.html
+++ b/application/admin/view/Record/record.html
@@ -17,7 +17,7 @@
                         <!--内容主体-->
                         <blockquote class="layui-elem-quote news_search">
                             <!--<div class="layui-inline">-->
-                                <!--<form action="{:url('admin/Admin/searchAdmin')}" method="post">-->
+                                <!--<form action="{:url('adadmindmin/searchAdmin')}" method="post">-->
                                     <!--<div class="layui-input-inline">-->
                                         <!--<input type="text" value="" placeholder="请输入关键字" class="layui-input search_input" name="user">-->
                                     <!--</div>-->
